--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
     restart: always
     volumes:
       - '.:/var/www/CAMEL'
+      - './camel.conf:/var/www/CAMEL/api/Camel/camel.conf'
+      - './CAMEL.sql:/tmp/CAMEL.sql'
 
   db:
     container_name: camel-database
